tests/baselines/reference/unusedPrivateVariableInClass1.errors.txt
tests/cases/compiler/unusedPrivateVariableInClass1.ts(3,5): error TS6133: Variable 'x' has never been used.


==== tests/cases/compiler/unusedPrivateVariableInClass1.ts (1 errors) ====
    
    class greeter {
        private x: string;
        ~~~~~~~~~~~~~~~~~~
!!! error TS6133: Variable 'x' has never been used.
    }